# datastore-api-server/controllers/default_controller.py
@@ -1,5 +1,29 @@
 import flask
 
+def get_mock_financial_account():
+    return {
+        "ObligationsIncurredTotalByTAS_CPE": 0,
+        "ContractAuthorityAmountTotal_CPE": 0,
+        "AllocationTransferAgencyIdentifier": "string",
+        "BudgetAuthorityUnobligatedBalanceBroughtForward_FYB": 0,
+        "GrossOutlayAmountByTAS_CPE": 0,
+        "BudgetAuthorityAvailableAmountTotal_CPE": 0,
+        "AvailabilityTypeCode": "string",
+        "AgencyIdentifier": "string",
+        "DeobligationsRecoveriesRefundsByTAS_CPE": 0,
+        "BorrowingAuthorityAmountTotal_CPE": 0,
+        "AdjustmentsToUnobligatedBalanceBroughtForward_CPE": 0,
+        "SpendingAuthorityfromOffsettingCollectionsAmountTotal_CPE": 0,
+        "EndingPeriodOfAvailability": "string",
+        "SubAccountCode": "string",
+        "StatusOfBudgetaryResourcesTotal_CPE": 0,
+        "BudgetAuthorityAppropriatedAmount_CPE": 0,
+        "OtherBudgetaryResourcesAmount_CPE": 0,
+        "UnobligatedBalance_CPE": 0,
+        "MainAccountCode": "string",
+        "BeginningPeriodOfAvailability": "string"
+    }
+
 def get_mock_slim_award():
     return {
         "AgencyIdentifier": "string",
@@ -85,3 +109,6 @@ def awards_qualifiers_get(qualifiers):
 
 def awards_slim_qualifiers_get(qualifiers):
     return flask.jsonify({ "results": [get_mock_slim_award(), get_mock_slim_award()]})
+
+def financial_account_mac_get(MAC):
+    return flask.jsonify({ "results": get_mock_financial_account()})
